--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "prisma": "^5.5.2",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5"
   }
 }
