--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -20,7 +20,7 @@
     ],
     "paths": {
       "@tsv/*": ["./src/*"],
-      "@tsv/utils": ["lib/utils"]
+      "@tsv/utils": ["./lib/utils"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
