--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,37 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# Dependencies
+node_modules
+.pnp
 .pnp.js
-.yarn/install-state.gz
 
-# testing
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
 /coverage
 
-# next.js
-/.next/
-/out/
+# Turbo
+.turbo
 
-# production
-/build
+# Vercel
+.vercel
 
-# misc
-.DS_Store
-*.pem
+# Build Outputs
+.next/
+out/
+build
+dist
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Misc
+.DS_Store
+*.pem
