--- a/packages/ui/tsconfig.lint.json
+++ b/packages/ui/tsconfig.lint.json
@@ -1,7 +1,8 @@
 {
   "extends": "@tsv/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src", "turbo"],
   "exclude": ["node_modules", "dist"]
