--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tout-sur-ma-ville-front",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@tanstack/react-query": "^5.14.2",
+    "@tsv/ui": "workspace:*",
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -21,8 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "@tsv/ui": "workspace:*"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
