--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,13 +10,19 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
+    "@apollo/server": "^4.9.5",
+    "@as-integrations/next": "^3.0.0",
     "@prisma/client": "^5.5.2",
     "@tanstack/react-query": "^5.14.2",
+    "@tanstack/react-query-devtools": "^5.14.2",
     "@tsv/ui": "workspace:*",
     "@vercel/postgres": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cz-conventional-changelog": "^3.3.0",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "husky": "^8.0.3",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
