--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tailwindcss/vite": "4.0.0-beta.8",
     "nuxt": "^3.14.1592",
+    "tailwindcss": "4.0.0-beta.8",
     "vue": "latest",
     "vue-router": "latest"
   }
