--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "0.10.3",
     "@tailwindcss/vite": "4.0.0-beta.8",
     "nuxt": "^3.14.1592",
     "tailwindcss": "4.0.0-beta.8",
