--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,22 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "pnpm lint:eslint && pnpm lint:prettier",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier . --check",
+    "lintfix": "eslint . --fix && prettier --write --list-different ."
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.7.4",
     "@nuxt/fonts": "0.10.3",
     "@primevue/themes": "^4.2.5",
     "@tailwindcss/vite": "4.0.0-beta.8",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "nuxt": "^3.14.1592",
+    "prettier": "^3.4.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "tailwindcss": "4.0.0-beta.8",
